# ffb-research-streamlit

./: Player.py  README.md  app.py  data_loader.py  import_test.py  kpi.py  main.py  pyproject.toml  scoring.py  visualizations.py
.devcontainer/: devcontainer.json
app/: main.py  player_comparison.py
app/components/: kpi.py  selectas.py  visualizations.py  visualizations_new.py  visualizations_old.py
app/pages/: Custom Scoring.py  Player.py  custom_scoring.py  player_comparison.py  player_details.py  player_details_makeover.py  player_details_new.py  player_details_old.py  scratch_page.py
app/utils/: data_loader.py  data_loader_new.py  scoring.py
pages/: Custom Scoring.py
