[tool.poetry]
name = "ffb-research-streamlit" #renamed
version = "0.1.0"
description = "Make your own decisions!"
authors = ["Sean Hannon <seanhannon00@gmail.com>"]
readme = "README.md"
package-mode = false  # Moved

[tool.poetry.dependencies]
python = "^3.9.8,<3.11"
nfl-data-py = ">=0.3.3,<0.4.0"
streamlit = ">=1.41.1,<2.0.0"
plotly = ">=5.24.1,<6.0.0"